--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carousel</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div id="container">
+        <div id="img_container">
+            <img src="" alt="" id="image">
+        </div>
+    </div>
 
     <script lang="text/javascript" src="./js/script.js"></script>
 </body>
