--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carousel</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <div id="container">
         <div id="img_container">
+            <button class="fa-solid fa-angle-up button" id="up"></button>
             <img src="" alt="" id="image">
+            <button class="fa-solid fa-angle-down button" id="down"></button>
         </div>
     </div>
 
